# mercator-go

./: .gitignore  Dockerfile.tests  Jenkinsfile  Makefile  README.md  cico_build_deploy.sh  cico_run_tests.sh  cico_setup.sh  main.go  make_rpm.sh  mercator-go.spec  mercator.spec
core/: handlers.go
core/fileutils/: fileutils_linux.go  fileutils_windows.go
handler_templates/: handler_dotnetsolution  handler_goglide  handler_golang  handler_gradle  handler_haskellcabal  handler_java  handler_npm  handler_python  handler_ruby  handler_rustcrate  handlers_template.yml
handlers/: node  python-dist  python-requirements  ruby
handlers/dotnet_handler/: Makefile  MercatorDotNet.sln  MercatorDotNet.userprefs
handlers/dotnet_handler/MercatorDotNet/: MercatorDotNet.csproj  Program.cs  packages.config
handlers/golang_handler/: Makefile  glide.yaml  godep.py  golang  gopkg.py  main.go
handlers/gradle_handler/: Makefile  gradle  package-lock.json  package.json
handlers/haskell_handler/: Makefile  mercator-hs.cabal  mercator-hs.hs
handlers/java_handler/: Makefile  pom.xml
handlers/npm_handler/: Makefile
handlers/pkginfo/pkginfo.egg-info/: PKG-INFO
handlers/python_handler/: Makefile  python
handlers/python_handler/pkginfo/: setup.cfg
handlers/ruby_handler/: Makefile
handlers/rust_handler/: Cargo.toml  Dockerfile  Makefile
tests/: feature_list.txt  runtest.sh
tests/features/: dotnet.feature  golang.feature  gradle.feature  haskell.feature  java.feature  javascript.feature  python-dist.feature  python.feature  ruby.feature  rust.feature
(+33 files in other folders)
