name:                mercator-hs
version:             0.1.0.0
synopsis:            Haskell package manifest handler for Mercator
description:         Haskell package manifest handler for Mercator
license:             MIT
license-file:        LICENSE
author:              Pavel Odvody
maintainer:          podvody@redhat.com
copyright:           Pavel Odvody 2017
category:            Data
build-type:          Simple
cabal-version:       >=1.8

source-repository this
  type:     git
  location: git://github.com/shaded-enmity/mercator-hs
  tag:      master

executable mercator-hs
  main-is:             mercator-hs.hs
  build-depends:       base >= 4.6.0
  build-depends:       Cabal >= 1.16.0
  build-depends:       aeson >= 1.2.1.0
  build-depends:       filepath >= 1.3.0.1
  build-depends:       directory >= 1.2.7.1
  build-depends:       text >= 1.2.2.2
